cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir29315 SHARED ${SRC_FILES} )
add_subdirectory(dir29316)
add_subdirectory(dir29510)
add_subdirectory(dir29698)
add_subdirectory(dir29712)
add_subdirectory(dir34411)
add_subdirectory(dir34534)
add_subdirectory(dir34673)
add_subdirectory(dir34721)
add_subdirectory(dir34756)
set_source_files_properties(file34864.cpp PROPERTIES COMPILE_FLAGS -Dfile34864)

set_source_files_properties(file34865.cpp PROPERTIES COMPILE_FLAGS -Dfile34865)

set_source_files_properties(file34866.cpp PROPERTIES COMPILE_FLAGS -Dfile34866)

set_source_files_properties(file34867.cpp PROPERTIES COMPILE_FLAGS -Dfile34867)

set_source_files_properties(file34868.cpp PROPERTIES COMPILE_FLAGS -Dfile34868)

set_source_files_properties(file34869.cpp PROPERTIES COMPILE_FLAGS -Dfile34869)

set_source_files_properties(file34870.cpp PROPERTIES COMPILE_FLAGS -Dfile34870)

set_source_files_properties(file34871.cpp PROPERTIES COMPILE_FLAGS -Dfile34871)

set_source_files_properties(file34872.cpp PROPERTIES COMPILE_FLAGS -Dfile34872)

set_source_files_properties(file34873.cpp PROPERTIES COMPILE_FLAGS -Dfile34873)

set_source_files_properties(file34874.cpp PROPERTIES COMPILE_FLAGS -Dfile34874)

set_source_files_properties(file34875.cpp PROPERTIES COMPILE_FLAGS -Dfile34875)

set_source_files_properties(file34876.cpp PROPERTIES COMPILE_FLAGS -Dfile34876)

set_source_files_properties(file34877.cpp PROPERTIES COMPILE_FLAGS -Dfile34877)

set_source_files_properties(file34878.cpp PROPERTIES COMPILE_FLAGS -Dfile34878)

set_source_files_properties(file34879.cpp PROPERTIES COMPILE_FLAGS -Dfile34879)

set_source_files_properties(file34880.cpp PROPERTIES COMPILE_FLAGS -Dfile34880)

set_source_files_properties(file34881.cpp PROPERTIES COMPILE_FLAGS -Dfile34881)

set_source_files_properties(file34882.cpp PROPERTIES COMPILE_FLAGS -Dfile34882)

set_source_files_properties(file34883.cpp PROPERTIES COMPILE_FLAGS -Dfile34883)

set_source_files_properties(file34884.cpp PROPERTIES COMPILE_FLAGS -Dfile34884)

set_source_files_properties(file34885.cpp PROPERTIES COMPILE_FLAGS -Dfile34885)

set_source_files_properties(file34886.cpp PROPERTIES COMPILE_FLAGS -Dfile34886)

set_source_files_properties(file34887.cpp PROPERTIES COMPILE_FLAGS -Dfile34887)

set_source_files_properties(file34888.cpp PROPERTIES COMPILE_FLAGS -Dfile34888)

set_source_files_properties(file34889.cpp PROPERTIES COMPILE_FLAGS -Dfile34889)

set_source_files_properties(file34890.cpp PROPERTIES COMPILE_FLAGS -Dfile34890)

set_source_files_properties(file34891.cpp PROPERTIES COMPILE_FLAGS -Dfile34891)

set_source_files_properties(file34892.cpp PROPERTIES COMPILE_FLAGS -Dfile34892)

set_source_files_properties(file34893.cpp PROPERTIES COMPILE_FLAGS -Dfile34893)

set_source_files_properties(file34894.cpp PROPERTIES COMPILE_FLAGS -Dfile34894)

set_source_files_properties(file34895.cpp PROPERTIES COMPILE_FLAGS -Dfile34895)

set_source_files_properties(file34896.cpp PROPERTIES COMPILE_FLAGS -Dfile34896)

set_source_files_properties(file34897.cpp PROPERTIES COMPILE_FLAGS -Dfile34897)

set_source_files_properties(file34898.cpp PROPERTIES COMPILE_FLAGS -Dfile34898)

set_source_files_properties(file34899.cpp PROPERTIES COMPILE_FLAGS -Dfile34899)

set_source_files_properties(file34900.cpp PROPERTIES COMPILE_FLAGS -Dfile34900)

set_source_files_properties(file34901.cpp PROPERTIES COMPILE_FLAGS -Dfile34901)

set_source_files_properties(file34902.cpp PROPERTIES COMPILE_FLAGS -Dfile34902)

set_source_files_properties(file34903.cpp PROPERTIES COMPILE_FLAGS -Dfile34903)

set_source_files_properties(file34904.cpp PROPERTIES COMPILE_FLAGS -Dfile34904)

set_source_files_properties(file34905.cpp PROPERTIES COMPILE_FLAGS -Dfile34905)

set_source_files_properties(file34906.cpp PROPERTIES COMPILE_FLAGS -Dfile34906)

set_source_files_properties(file34907.cpp PROPERTIES COMPILE_FLAGS -Dfile34907)

set_source_files_properties(file34908.cpp PROPERTIES COMPILE_FLAGS -Dfile34908)

set_source_files_properties(file34909.cpp PROPERTIES COMPILE_FLAGS -Dfile34909)

set_source_files_properties(file34910.cpp PROPERTIES COMPILE_FLAGS -Dfile34910)

set_source_files_properties(file34911.cpp PROPERTIES COMPILE_FLAGS -Dfile34911)

set_source_files_properties(file34912.cpp PROPERTIES COMPILE_FLAGS -Dfile34912)

set_source_files_properties(file34913.cpp PROPERTIES COMPILE_FLAGS -Dfile34913)

set_source_files_properties(file34914.cpp PROPERTIES COMPILE_FLAGS -Dfile34914)

set_source_files_properties(file34915.cpp PROPERTIES COMPILE_FLAGS -Dfile34915)

set_source_files_properties(file34916.cpp PROPERTIES COMPILE_FLAGS -Dfile34916)

set_source_files_properties(file34917.cpp PROPERTIES COMPILE_FLAGS -Dfile34917)

set_source_files_properties(file34918.cpp PROPERTIES COMPILE_FLAGS -Dfile34918)

set_source_files_properties(file34919.cpp PROPERTIES COMPILE_FLAGS -Dfile34919)

set_source_files_properties(file34920.cpp PROPERTIES COMPILE_FLAGS -Dfile34920)

set_source_files_properties(file34921.cpp PROPERTIES COMPILE_FLAGS -Dfile34921)

set_source_files_properties(file34922.cpp PROPERTIES COMPILE_FLAGS -Dfile34922)

set_source_files_properties(file34923.cpp PROPERTIES COMPILE_FLAGS -Dfile34923)

set_source_files_properties(file34924.cpp PROPERTIES COMPILE_FLAGS -Dfile34924)

set_source_files_properties(file34925.cpp PROPERTIES COMPILE_FLAGS -Dfile34925)

set_source_files_properties(file34926.cpp PROPERTIES COMPILE_FLAGS -Dfile34926)

set_source_files_properties(file34927.cpp PROPERTIES COMPILE_FLAGS -Dfile34927)

set_source_files_properties(file34928.cpp PROPERTIES COMPILE_FLAGS -Dfile34928)

set_source_files_properties(file34929.cpp PROPERTIES COMPILE_FLAGS -Dfile34929)

set_source_files_properties(file34930.cpp PROPERTIES COMPILE_FLAGS -Dfile34930)

set_source_files_properties(file34931.cpp PROPERTIES COMPILE_FLAGS -Dfile34931)

set_source_files_properties(file34932.cpp PROPERTIES COMPILE_FLAGS -Dfile34932)

set_source_files_properties(file34933.cpp PROPERTIES COMPILE_FLAGS -Dfile34933)

set_source_files_properties(file34934.cpp PROPERTIES COMPILE_FLAGS -Dfile34934)

set_source_files_properties(file34935.cpp PROPERTIES COMPILE_FLAGS -Dfile34935)

set_source_files_properties(file34936.cpp PROPERTIES COMPILE_FLAGS -Dfile34936)

set_source_files_properties(file34937.cpp PROPERTIES COMPILE_FLAGS -Dfile34937)

set_source_files_properties(file34938.cpp PROPERTIES COMPILE_FLAGS -Dfile34938)

set_source_files_properties(file34939.cpp PROPERTIES COMPILE_FLAGS -Dfile34939)

set_source_files_properties(file34940.cpp PROPERTIES COMPILE_FLAGS -Dfile34940)

set_source_files_properties(file34941.cpp PROPERTIES COMPILE_FLAGS -Dfile34941)

set_source_files_properties(file34942.cpp PROPERTIES COMPILE_FLAGS -Dfile34942)

set_source_files_properties(file34943.cpp PROPERTIES COMPILE_FLAGS -Dfile34943)

set_source_files_properties(file34944.cpp PROPERTIES COMPILE_FLAGS -Dfile34944)

set_source_files_properties(file34945.cpp PROPERTIES COMPILE_FLAGS -Dfile34945)

set_source_files_properties(file34946.cpp PROPERTIES COMPILE_FLAGS -Dfile34946)

set_source_files_properties(file34947.cpp PROPERTIES COMPILE_FLAGS -Dfile34947)

set_source_files_properties(file34948.cpp PROPERTIES COMPILE_FLAGS -Dfile34948)

set_source_files_properties(file34949.cpp PROPERTIES COMPILE_FLAGS -Dfile34949)

set_source_files_properties(file34950.cpp PROPERTIES COMPILE_FLAGS -Dfile34950)

set_source_files_properties(file34951.cpp PROPERTIES COMPILE_FLAGS -Dfile34951)

set_source_files_properties(file34952.cpp PROPERTIES COMPILE_FLAGS -Dfile34952)

set_source_files_properties(file34953.cpp PROPERTIES COMPILE_FLAGS -Dfile34953)

set_source_files_properties(file34954.cpp PROPERTIES COMPILE_FLAGS -Dfile34954)

set_source_files_properties(file34955.cpp PROPERTIES COMPILE_FLAGS -Dfile34955)

set_source_files_properties(file34956.cpp PROPERTIES COMPILE_FLAGS -Dfile34956)

set_source_files_properties(file34957.cpp PROPERTIES COMPILE_FLAGS -Dfile34957)

set_source_files_properties(file34958.cpp PROPERTIES COMPILE_FLAGS -Dfile34958)

set_source_files_properties(file34959.cpp PROPERTIES COMPILE_FLAGS -Dfile34959)

set_source_files_properties(file34960.cpp PROPERTIES COMPILE_FLAGS -Dfile34960)

set_source_files_properties(file34961.cpp PROPERTIES COMPILE_FLAGS -Dfile34961)

set_source_files_properties(file34962.cpp PROPERTIES COMPILE_FLAGS -Dfile34962)

set_source_files_properties(file34963.cpp PROPERTIES COMPILE_FLAGS -Dfile34963)

set_source_files_properties(file34964.cpp PROPERTIES COMPILE_FLAGS -Dfile34964)

set_source_files_properties(file34965.cpp PROPERTIES COMPILE_FLAGS -Dfile34965)

set_source_files_properties(file34966.cpp PROPERTIES COMPILE_FLAGS -Dfile34966)

set_source_files_properties(file34967.cpp PROPERTIES COMPILE_FLAGS -Dfile34967)

set_source_files_properties(file34968.cpp PROPERTIES COMPILE_FLAGS -Dfile34968)

set_source_files_properties(file34969.cpp PROPERTIES COMPILE_FLAGS -Dfile34969)

set_source_files_properties(file34970.cpp PROPERTIES COMPILE_FLAGS -Dfile34970)

set_source_files_properties(file34971.cpp PROPERTIES COMPILE_FLAGS -Dfile34971)

set_source_files_properties(file34972.cpp PROPERTIES COMPILE_FLAGS -Dfile34972)

set_source_files_properties(file34973.cpp PROPERTIES COMPILE_FLAGS -Dfile34973)

set_source_files_properties(file34974.cpp PROPERTIES COMPILE_FLAGS -Dfile34974)

set_source_files_properties(file34975.cpp PROPERTIES COMPILE_FLAGS -Dfile34975)

set_source_files_properties(file34976.cpp PROPERTIES COMPILE_FLAGS -Dfile34976)

set_source_files_properties(file34977.cpp PROPERTIES COMPILE_FLAGS -Dfile34977)

set_source_files_properties(file34978.cpp PROPERTIES COMPILE_FLAGS -Dfile34978)

set_source_files_properties(file34979.cpp PROPERTIES COMPILE_FLAGS -Dfile34979)

set_source_files_properties(file34980.cpp PROPERTIES COMPILE_FLAGS -Dfile34980)

set_source_files_properties(file34981.cpp PROPERTIES COMPILE_FLAGS -Dfile34981)

set_source_files_properties(file34982.cpp PROPERTIES COMPILE_FLAGS -Dfile34982)

set_source_files_properties(file34983.cpp PROPERTIES COMPILE_FLAGS -Dfile34983)

set_source_files_properties(file34984.cpp PROPERTIES COMPILE_FLAGS -Dfile34984)

set_source_files_properties(file34985.cpp PROPERTIES COMPILE_FLAGS -Dfile34985)

set_source_files_properties(file34986.cpp PROPERTIES COMPILE_FLAGS -Dfile34986)

set_source_files_properties(file34987.cpp PROPERTIES COMPILE_FLAGS -Dfile34987)

set_source_files_properties(file34988.cpp PROPERTIES COMPILE_FLAGS -Dfile34988)
