cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir34989 SHARED ${SRC_FILES} )
set_source_files_properties(file34990.cpp PROPERTIES COMPILE_FLAGS -Dfile34990)

set_source_files_properties(file34991.cpp PROPERTIES COMPILE_FLAGS -Dfile34991)

set_source_files_properties(file34992.cpp PROPERTIES COMPILE_FLAGS -Dfile34992)

set_source_files_properties(file34993.cpp PROPERTIES COMPILE_FLAGS -Dfile34993)

set_source_files_properties(file34994.cpp PROPERTIES COMPILE_FLAGS -Dfile34994)

set_source_files_properties(file34995.cpp PROPERTIES COMPILE_FLAGS -Dfile34995)

set_source_files_properties(file34996.cpp PROPERTIES COMPILE_FLAGS -Dfile34996)

set_source_files_properties(file34997.cpp PROPERTIES COMPILE_FLAGS -Dfile34997)

set_source_files_properties(file34998.cpp PROPERTIES COMPILE_FLAGS -Dfile34998)

set_source_files_properties(file34999.cpp PROPERTIES COMPILE_FLAGS -Dfile34999)

set_source_files_properties(file35000.cpp PROPERTIES COMPILE_FLAGS -Dfile35000)

set_source_files_properties(file35001.cpp PROPERTIES COMPILE_FLAGS -Dfile35001)

set_source_files_properties(file35002.cpp PROPERTIES COMPILE_FLAGS -Dfile35002)

set_source_files_properties(file35003.cpp PROPERTIES COMPILE_FLAGS -Dfile35003)

set_source_files_properties(file35004.cpp PROPERTIES COMPILE_FLAGS -Dfile35004)

set_source_files_properties(file35005.cpp PROPERTIES COMPILE_FLAGS -Dfile35005)

set_source_files_properties(file35006.cpp PROPERTIES COMPILE_FLAGS -Dfile35006)

set_source_files_properties(file35007.cpp PROPERTIES COMPILE_FLAGS -Dfile35007)

set_source_files_properties(file35008.cpp PROPERTIES COMPILE_FLAGS -Dfile35008)

set_source_files_properties(file35009.cpp PROPERTIES COMPILE_FLAGS -Dfile35009)

set_source_files_properties(file35010.cpp PROPERTIES COMPILE_FLAGS -Dfile35010)

set_source_files_properties(file35011.cpp PROPERTIES COMPILE_FLAGS -Dfile35011)

set_source_files_properties(file35012.cpp PROPERTIES COMPILE_FLAGS -Dfile35012)

set_source_files_properties(file35013.cpp PROPERTIES COMPILE_FLAGS -Dfile35013)

set_source_files_properties(file35014.cpp PROPERTIES COMPILE_FLAGS -Dfile35014)

set_source_files_properties(file35015.cpp PROPERTIES COMPILE_FLAGS -Dfile35015)

set_source_files_properties(file35016.cpp PROPERTIES COMPILE_FLAGS -Dfile35016)

set_source_files_properties(file35017.cpp PROPERTIES COMPILE_FLAGS -Dfile35017)

set_source_files_properties(file35018.cpp PROPERTIES COMPILE_FLAGS -Dfile35018)

set_source_files_properties(file35019.cpp PROPERTIES COMPILE_FLAGS -Dfile35019)

set_source_files_properties(file35020.cpp PROPERTIES COMPILE_FLAGS -Dfile35020)

set_source_files_properties(file35021.cpp PROPERTIES COMPILE_FLAGS -Dfile35021)

set_source_files_properties(file35022.cpp PROPERTIES COMPILE_FLAGS -Dfile35022)

set_source_files_properties(file35023.cpp PROPERTIES COMPILE_FLAGS -Dfile35023)

set_source_files_properties(file35024.cpp PROPERTIES COMPILE_FLAGS -Dfile35024)

set_source_files_properties(file35025.cpp PROPERTIES COMPILE_FLAGS -Dfile35025)

set_source_files_properties(file35026.cpp PROPERTIES COMPILE_FLAGS -Dfile35026)

set_source_files_properties(file35027.cpp PROPERTIES COMPILE_FLAGS -Dfile35027)

set_source_files_properties(file35028.cpp PROPERTIES COMPILE_FLAGS -Dfile35028)

set_source_files_properties(file35029.cpp PROPERTIES COMPILE_FLAGS -Dfile35029)

set_source_files_properties(file35030.cpp PROPERTIES COMPILE_FLAGS -Dfile35030)

set_source_files_properties(file35031.cpp PROPERTIES COMPILE_FLAGS -Dfile35031)

set_source_files_properties(file35032.cpp PROPERTIES COMPILE_FLAGS -Dfile35032)

set_source_files_properties(file35033.cpp PROPERTIES COMPILE_FLAGS -Dfile35033)

set_source_files_properties(file35034.cpp PROPERTIES COMPILE_FLAGS -Dfile35034)

set_source_files_properties(file35035.cpp PROPERTIES COMPILE_FLAGS -Dfile35035)

set_source_files_properties(file35036.cpp PROPERTIES COMPILE_FLAGS -Dfile35036)

set_source_files_properties(file35037.cpp PROPERTIES COMPILE_FLAGS -Dfile35037)

set_source_files_properties(file35038.cpp PROPERTIES COMPILE_FLAGS -Dfile35038)

set_source_files_properties(file35039.cpp PROPERTIES COMPILE_FLAGS -Dfile35039)

set_source_files_properties(file35040.cpp PROPERTIES COMPILE_FLAGS -Dfile35040)
