cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir35041 SHARED ${SRC_FILES} )
set_source_files_properties(file35042.cpp PROPERTIES COMPILE_FLAGS -Dfile35042)

set_source_files_properties(file35043.cpp PROPERTIES COMPILE_FLAGS -Dfile35043)

set_source_files_properties(file35044.cpp PROPERTIES COMPILE_FLAGS -Dfile35044)

set_source_files_properties(file35045.cpp PROPERTIES COMPILE_FLAGS -Dfile35045)

set_source_files_properties(file35046.cpp PROPERTIES COMPILE_FLAGS -Dfile35046)

set_source_files_properties(file35047.cpp PROPERTIES COMPILE_FLAGS -Dfile35047)

set_source_files_properties(file35048.cpp PROPERTIES COMPILE_FLAGS -Dfile35048)

set_source_files_properties(file35049.cpp PROPERTIES COMPILE_FLAGS -Dfile35049)

set_source_files_properties(file35050.cpp PROPERTIES COMPILE_FLAGS -Dfile35050)

set_source_files_properties(file35051.cpp PROPERTIES COMPILE_FLAGS -Dfile35051)

set_source_files_properties(file35052.cpp PROPERTIES COMPILE_FLAGS -Dfile35052)

set_source_files_properties(file35053.cpp PROPERTIES COMPILE_FLAGS -Dfile35053)

set_source_files_properties(file35054.cpp PROPERTIES COMPILE_FLAGS -Dfile35054)

set_source_files_properties(file35055.cpp PROPERTIES COMPILE_FLAGS -Dfile35055)

set_source_files_properties(file35056.cpp PROPERTIES COMPILE_FLAGS -Dfile35056)

set_source_files_properties(file35057.cpp PROPERTIES COMPILE_FLAGS -Dfile35057)

set_source_files_properties(file35058.cpp PROPERTIES COMPILE_FLAGS -Dfile35058)

set_source_files_properties(file35059.cpp PROPERTIES COMPILE_FLAGS -Dfile35059)

set_source_files_properties(file35060.cpp PROPERTIES COMPILE_FLAGS -Dfile35060)

set_source_files_properties(file35061.cpp PROPERTIES COMPILE_FLAGS -Dfile35061)

set_source_files_properties(file35062.cpp PROPERTIES COMPILE_FLAGS -Dfile35062)

set_source_files_properties(file35063.cpp PROPERTIES COMPILE_FLAGS -Dfile35063)

set_source_files_properties(file35064.cpp PROPERTIES COMPILE_FLAGS -Dfile35064)

set_source_files_properties(file35065.cpp PROPERTIES COMPILE_FLAGS -Dfile35065)

set_source_files_properties(file35066.cpp PROPERTIES COMPILE_FLAGS -Dfile35066)

set_source_files_properties(file35067.cpp PROPERTIES COMPILE_FLAGS -Dfile35067)

set_source_files_properties(file35068.cpp PROPERTIES COMPILE_FLAGS -Dfile35068)

set_source_files_properties(file35069.cpp PROPERTIES COMPILE_FLAGS -Dfile35069)

set_source_files_properties(file35070.cpp PROPERTIES COMPILE_FLAGS -Dfile35070)

set_source_files_properties(file35071.cpp PROPERTIES COMPILE_FLAGS -Dfile35071)

set_source_files_properties(file35072.cpp PROPERTIES COMPILE_FLAGS -Dfile35072)

set_source_files_properties(file35073.cpp PROPERTIES COMPILE_FLAGS -Dfile35073)

set_source_files_properties(file35074.cpp PROPERTIES COMPILE_FLAGS -Dfile35074)

set_source_files_properties(file35075.cpp PROPERTIES COMPILE_FLAGS -Dfile35075)

set_source_files_properties(file35076.cpp PROPERTIES COMPILE_FLAGS -Dfile35076)

set_source_files_properties(file35077.cpp PROPERTIES COMPILE_FLAGS -Dfile35077)
