cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir7942 SHARED ${SRC_FILES} )
add_subdirectory(dir7943)
add_subdirectory(dir7976)
add_subdirectory(dir8062)
add_subdirectory(dir21876)
add_subdirectory(dir21998)
add_subdirectory(dir22084)
set_source_files_properties(file22292.cpp PROPERTIES COMPILE_FLAGS -Dfile22292)

set_source_files_properties(file22293.cpp PROPERTIES COMPILE_FLAGS -Dfile22293)

set_source_files_properties(file22294.cpp PROPERTIES COMPILE_FLAGS -Dfile22294)

set_source_files_properties(file22295.cpp PROPERTIES COMPILE_FLAGS -Dfile22295)

set_source_files_properties(file22296.cpp PROPERTIES COMPILE_FLAGS -Dfile22296)

set_source_files_properties(file22297.cpp PROPERTIES COMPILE_FLAGS -Dfile22297)

set_source_files_properties(file22298.cpp PROPERTIES COMPILE_FLAGS -Dfile22298)

set_source_files_properties(file22299.cpp PROPERTIES COMPILE_FLAGS -Dfile22299)

set_source_files_properties(file22300.cpp PROPERTIES COMPILE_FLAGS -Dfile22300)

set_source_files_properties(file22301.cpp PROPERTIES COMPILE_FLAGS -Dfile22301)

set_source_files_properties(file22302.cpp PROPERTIES COMPILE_FLAGS -Dfile22302)

set_source_files_properties(file22303.cpp PROPERTIES COMPILE_FLAGS -Dfile22303)

set_source_files_properties(file22304.cpp PROPERTIES COMPILE_FLAGS -Dfile22304)

set_source_files_properties(file22305.cpp PROPERTIES COMPILE_FLAGS -Dfile22305)

set_source_files_properties(file22306.cpp PROPERTIES COMPILE_FLAGS -Dfile22306)

set_source_files_properties(file22307.cpp PROPERTIES COMPILE_FLAGS -Dfile22307)

set_source_files_properties(file22308.cpp PROPERTIES COMPILE_FLAGS -Dfile22308)

set_source_files_properties(file22309.cpp PROPERTIES COMPILE_FLAGS -Dfile22309)

set_source_files_properties(file22310.cpp PROPERTIES COMPILE_FLAGS -Dfile22310)

set_source_files_properties(file22311.cpp PROPERTIES COMPILE_FLAGS -Dfile22311)

set_source_files_properties(file22312.cpp PROPERTIES COMPILE_FLAGS -Dfile22312)

set_source_files_properties(file22313.cpp PROPERTIES COMPILE_FLAGS -Dfile22313)

set_source_files_properties(file22314.cpp PROPERTIES COMPILE_FLAGS -Dfile22314)

set_source_files_properties(file22315.cpp PROPERTIES COMPILE_FLAGS -Dfile22315)

set_source_files_properties(file22316.cpp PROPERTIES COMPILE_FLAGS -Dfile22316)

set_source_files_properties(file22317.cpp PROPERTIES COMPILE_FLAGS -Dfile22317)

set_source_files_properties(file22318.cpp PROPERTIES COMPILE_FLAGS -Dfile22318)

set_source_files_properties(file22319.cpp PROPERTIES COMPILE_FLAGS -Dfile22319)

set_source_files_properties(file22320.cpp PROPERTIES COMPILE_FLAGS -Dfile22320)

set_source_files_properties(file22321.cpp PROPERTIES COMPILE_FLAGS -Dfile22321)

set_source_files_properties(file22322.cpp PROPERTIES COMPILE_FLAGS -Dfile22322)

set_source_files_properties(file22323.cpp PROPERTIES COMPILE_FLAGS -Dfile22323)

set_source_files_properties(file22324.cpp PROPERTIES COMPILE_FLAGS -Dfile22324)

set_source_files_properties(file22325.cpp PROPERTIES COMPILE_FLAGS -Dfile22325)

set_source_files_properties(file22326.cpp PROPERTIES COMPILE_FLAGS -Dfile22326)

set_source_files_properties(file22327.cpp PROPERTIES COMPILE_FLAGS -Dfile22327)

set_source_files_properties(file22328.cpp PROPERTIES COMPILE_FLAGS -Dfile22328)

set_source_files_properties(file22329.cpp PROPERTIES COMPILE_FLAGS -Dfile22329)

set_source_files_properties(file22330.cpp PROPERTIES COMPILE_FLAGS -Dfile22330)

set_source_files_properties(file22331.cpp PROPERTIES COMPILE_FLAGS -Dfile22331)

set_source_files_properties(file22332.cpp PROPERTIES COMPILE_FLAGS -Dfile22332)

set_source_files_properties(file22333.cpp PROPERTIES COMPILE_FLAGS -Dfile22333)

set_source_files_properties(file22334.cpp PROPERTIES COMPILE_FLAGS -Dfile22334)

set_source_files_properties(file22335.cpp PROPERTIES COMPILE_FLAGS -Dfile22335)

set_source_files_properties(file22336.cpp PROPERTIES COMPILE_FLAGS -Dfile22336)

set_source_files_properties(file22337.cpp PROPERTIES COMPILE_FLAGS -Dfile22337)

set_source_files_properties(file22338.cpp PROPERTIES COMPILE_FLAGS -Dfile22338)
